--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/button_sidebar.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/collage_editor.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Art/Pixel Shape Tiles/Pixel background/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/3. Color/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/3. Color/Picture/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/1. Grey/", "res://Art/Fonts/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -34,7 +34,7 @@ open_scenes=PackedStringArray("res://Scenes/title_screen.tscn", "res://Scenes/co
 current_scene="res://Scenes/collage_editor.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
