--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,10 +31,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/title_screen.tscn", "res://Scenes/collage_editor.tscn", "res://Scenes/level_select_screen.tscn")
-current_scene="res://Scenes/collage_editor.tscn"
+current_scene="res://Scenes/level_select_screen.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
