--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Art/", "res://Art/Pixel Shape Tiles/Pixel background/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/3. Color/Picture/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/collage_editor.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Art/Pixel Shape Tiles/Pixel background/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/3. Color/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/3. Color/Picture/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/1. Grey/", "res://Art/Fonts/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,8 +30,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/title_screen.tscn", "res://Scenes/collage_editor.tscn", "res://Scenes/level_select_screen.tscn")
-current_scene="res://Scenes/level_select_screen.tscn"
+open_scenes=PackedStringArray("res://Scenes/level_select_screen.tscn", "res://Scenes/title_screen.tscn", "res://Scenes/collage_editor.tscn")
+current_scene="res://Scenes/collage_editor.tscn"
 center_split_offset=-491
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -46,9 +46,9 @@ size=Vector2i(2048, 1644)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/button_sidebar.gd", "res://Scripts/image.gd", "res://Scripts/label_effect.gd", "res://Scripts/level_select_screen.gd", "res://Icons/Notes for icons.txt", "res://Scripts/player.gd", "res://Scripts/title_label_effect.gd", "res://Scripts/title_screen.gd"]
-selected_script="res://Scripts/image.gd"
-open_help=[]
+open_scripts=["res://Scripts/button_sidebar.gd", "res://Scripts/image.gd", "res://Scripts/level_select_screen.gd", "res://Icons/Notes for icons.txt", "res://Scripts/player.gd", "res://Scripts/title_label_effect.gd", "res://Scripts/title_screen.gd"]
+selected_script=""
+open_help=["Sprite2D"]
 script_split_offset=300
 list_split_offset=0
 zoom_factor=0.926307
