--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/collage_editor.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Art/Pixel Shape Tiles/Pixel background/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/3. Color/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/3. Color/Picture/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/1. Grey/", "res://Art/Fonts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Icons/trashcan.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Icons/", "res://Art/Pixel Shape Tiles/Pixel background/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/3. Color/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/3. Color/Picture/", "res://Art/Pixel Shape Tiles/Pixel background/32x32/1. Grey/", "res://Art/Fonts/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -47,8 +47,8 @@ size=Vector2i(2048, 1644)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/button_sidebar.gd", "res://Scripts/image.gd", "res://Scripts/level_select_screen.gd", "res://Icons/Notes for icons.txt", "res://Scripts/player.gd", "res://Scripts/title_label_effect.gd", "res://Scripts/title_screen.gd"]
-selected_script=""
-open_help=["Sprite2D"]
+selected_script="res://Scripts/image.gd"
+open_help=["CanvasItem", "image", "Material", "ShaderMaterial", "Sprite2D"]
 script_split_offset=300
 list_split_offset=0
 zoom_factor=0.926307
@@ -60,7 +60,7 @@ floating_window_screen=0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://Scenes/highlight_shader.gdshader"]
 split_offset=400
-selected_shader=""
+selected_shader="res://Scenes/highlight_shader.gdshader"
 text_shader_zoom_factor=1.0
